--- a/package.json
+++ b/package.json
@@ -33,11 +33,17 @@
   },
   "homepage": "https://github.com/pingleware/private-ethereum#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
+    "apollo-server-express": "^3.6.2",
     "body-parser": "^1.19.1",
     "config.json": "^0.0.4",
+    "crypto": "^1.0.1",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "json-rpc-2.0": "^1.0.0"
+    "graphql-tools": "^8.2.0",
+    "json-rpc-2.0": "^1.0.0",
+    "keccak256": "^1.0.6",
+    "mysql": "^2.18.1"
   }
 }
